syntax = "proto3";

option go_package = "internal/proto";
package proto;
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

service GenerateTask {
  rpc GiveTask(google.protobuf.Empty) returns (TaskResponse);
  rpc GetResult(ResultRequest) returns (google.protobuf.Empty);
}

message TaskResponse{
  int32 id = 1;
  float x = 2;
  float y = 3;
  string operator = 4;
  google.protobuf.Timestamp LastAccess = 5;
}

message ResultRequest{
  int32 id = 1;
  oneof details{
      float result = 2;
      string error = 3;
  }
}
